Correct vignette. Bump version.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 0.99.6 (2022-03-24)
++ Corrected example inside vignette.
+
 Changes in version 0.99.0 (2022-03-17)
 + Submitted to Bioconductor
 
